# latexpp

./: .gitignore  .readthedocs.yaml  .travis.yml  License.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests-ci.yml
doc/: api-latexpp.rst  conf.py  customfix.rst  fixes.rst  howitworks.rst  howtouse.rst  impl-pylatexenc.rst  index.rst  latexpp.fix.rst  latexpp.macro_subst_helper.rst  latexpp.pragma_fix.rst  latexpp.preprocessor.rst  lppconfig.rst  pragmas.rst
doc/_static/: custom.css
doc/example_custom_fix/: lppconfig.yml  testdoc.tex
doc/example_custom_fix/myfixes/: mycustomfix.py
latexpp/: __init__.py  __main__.py  _lpp_parsing.py  dynlw.py  fix.py  lpp_pragma.py  macro_subst_helper.py  phfstd.py  pragma_fix.py  preprocessor.py
latexpp/fixes/: __init__.py  _basefix.py  _lpp_pragma_fix.py  _newcommand_pylatexenc3.py  add_preamble.py  archive.py  bib.py  bibfixes.py  comments.py  deps.py  environment_contents.py  figures.py  ifsimple.py  input.py  input_replace.py  labels.py  macro_subst.py  macros.py  newcommand.py  preamble.py  ref.py  regional_fix.py  removecomments.py  removeusepackage.py  usepackage.py
latexpp/parsinglib/: phfparen.py  phfqit.py
test/: helper_latex_to_nodes_dict.py  helpers.py  test_base_fixes.py  test_doccases.py  test_fix.py  test_fixes_bib.py  test_fixes_comments.py  test_fixes_deps.py  test_fixes_environment_contents.py  test_fixes_figures.py  test_fixes_ifsimple.py  test_fixes_input.py  test_fixes_labels.py  test_fixes_macro_subst.py  test_fixes_newcommand.py  test_fixes_pkg_cleveref.py  test_fixes_pkg_phfqit.py  test_fixes_preamble.py  test_fixes_ref.py  test_fixes_usepackage.py  test_latexpp.py  test_pragma_fix.py
(+14 files in other folders)
