[tool.poetry]
name = "latexpp"
version = "0.2.0a1"
description = "Latex preprocessor — apply macro definitions, remove comments, and more"
authors = ["Philippe Faist"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
pylatexenc = ">=3.0a15"
colorlog = ">=6.0.0a4"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
