[tool.poetry]
name = "latexpp"
version = "0.2.0a2"
description = "Latex preprocessor — apply macro definitions, remove comments, and more"
authors = ["Philippe Faist"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
pylatexenc = ">=3.0a15"
colorlog = ">=6.0.0a4"
PyYAML = "^6.0"

[tool.poetry.scripts]
latexpp = 'latexpp.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
toml = "^0.10.2"

[tool.poetry.group.builddoc]
optional = true

[tool.poetry.group.builddoc.dependencies]
Sphinx = ">=5.0.0"
sphinx-issues = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
